[gd_scene load_steps=55 format=3 uid="uid://bct3qseik8rat"]

[ext_resource type="Script" path="res://Belajar/belajar_angka.gd" id="1_41x14"]
[ext_resource type="Texture2D" uid="uid://dkpyhabw3ciy8" path="res://Assets/240_F_207184271_KGYtC1btjugpk0O6CVJSKnDI7BZ8PXkZ.jpg" id="2_gdpyp"]
[ext_resource type="Texture2D" uid="uid://k18nw1p0jicv" path="res://icon.svg" id="2_xe6rb"]
[ext_resource type="Texture2D" uid="uid://cf2xpsapq01xv" path="res://Assets/GUI/grass/Menu Buttons/Clear Menu Buttons/Grass-Buttons-arrow3.png" id="3_ih1sq"]
[ext_resource type="Theme" uid="uid://c7sd3381we7ys" path="res://themes/content_angka1.tres" id="3_ypmvh"]
[ext_resource type="Theme" uid="uid://cjqyyjxxa2fyl" path="res://themes/new_theme.tres" id="4_6i7jt"]
[ext_resource type="Theme" uid="uid://batvc30rlao15" path="res://themes/belajar_buttons.tres" id="4_7a65n"]
[ext_resource type="Texture2D" uid="uid://dtvu5wl0hqhci" path="res://Assets/GUI/grass/Menu Buttons/Clear Menu Buttons/Pressed/Buttons-pressed-arrow3.png" id="4_8iain"]
[ext_resource type="Texture2D" uid="uid://dkd4vokadxjqm" path="res://Assets/GUI/Math Game Assets/123 - abc/Block_0.png" id="6_ijaph"]
[ext_resource type="Texture2D" uid="uid://ca33ca84eswxx" path="res://Assets/GUI/Math Game Assets/123 - abc/0-pressed.png" id="7_374v6"]
[ext_resource type="Texture2D" uid="uid://bn7uoj04njdjd" path="res://Assets/GUI/Math Game Assets/123 - abc/0-hover.png" id="8_gf5i6"]
[ext_resource type="Texture2D" uid="uid://edul5254b2jk" path="res://Assets/GUI/Math Game Assets/123 - abc/Block_1.png" id="9_oomom"]
[ext_resource type="Texture2D" uid="uid://c44flbthecqxo" path="res://Assets/GUI/Math Game Assets/123 - abc/1-pressed.png" id="10_401gs"]
[ext_resource type="Texture2D" uid="uid://diwr6e2a82d7m" path="res://Assets/GUI/Math Game Assets/123 - abc/Block_2.png" id="10_jwj2f"]
[ext_resource type="Texture2D" uid="uid://ctts60hg72b3b" path="res://Assets/GUI/Math Game Assets/123 - abc/focused.png" id="10_xab3n"]
[ext_resource type="Texture2D" uid="uid://tqctiishk3ax" path="res://Assets/GUI/Math Game Assets/123 - abc/Block_3.png" id="11_781v2"]
[ext_resource type="Texture2D" uid="uid://cs3151ptjx40v" path="res://Assets/GUI/Math Game Assets/123 - abc/1-hover.png" id="11_bugm4"]
[ext_resource type="Texture2D" uid="uid://bonupnbg18s6g" path="res://Assets/GUI/Math Game Assets/123 - abc/Block_4.png" id="12_p5cc4"]
[ext_resource type="Texture2D" uid="uid://dgopoudy02bjf" path="res://Assets/GUI/Math Game Assets/123 - abc/2-pressed.png" id="13_8ge5a"]
[ext_resource type="Texture2D" uid="uid://c0s7qe1bptukh" path="res://Assets/GUI/Math Game Assets/123 - abc/Block_5.png" id="13_cisx6"]
[ext_resource type="Texture2D" uid="uid://crdwr0ebgmtdy" path="res://Assets/GUI/Math Game Assets/123 - abc/Block_6.png" id="14_6sueh"]
[ext_resource type="Texture2D" uid="uid://boo4pccw103vh" path="res://Assets/GUI/Math Game Assets/123 - abc/2-hover.png" id="14_ms5py"]
[ext_resource type="Texture2D" uid="uid://becw8m31pqwes" path="res://Assets/GUI/Math Game Assets/123 - abc/Block_7.png" id="15_2ovd6"]
[ext_resource type="Texture2D" uid="uid://cwfqrd58sknqp" path="res://Assets/GUI/Math Game Assets/123 - abc/Block_8.png" id="16_c3rg1"]
[ext_resource type="Texture2D" uid="uid://ba4b3o3vf6ytj" path="res://Assets/GUI/Math Game Assets/123 - abc/3-pressed.png" id="16_qjmnu"]
[ext_resource type="Texture2D" uid="uid://dpcsashnsrjwl" path="res://Assets/GUI/Math Game Assets/123 - abc/3-hover.png" id="17_4evuk"]
[ext_resource type="Texture2D" uid="uid://dve7nv1x8r5kv" path="res://Assets/GUI/Math Game Assets/123 - abc/Block_9.png" id="17_u53ll"]
[ext_resource type="Texture2D" uid="uid://bmdn30fcsacbr" path="res://Assets/GUI/Math Game Assets/123 - abc/4-pressed.png" id="19_s2slp"]
[ext_resource type="Texture2D" uid="uid://javvopon87f1" path="res://Assets/GUI/Math Game Assets/123 - abc/4-hover.png" id="20_sxeia"]
[ext_resource type="Texture2D" uid="uid://dqil84avmj7im" path="res://Assets/GUI/Math Game Assets/123 - abc/5-pressed.png" id="22_oobs1"]
[ext_resource type="Texture2D" uid="uid://bavptll6k2uv3" path="res://Assets/GUI/Math Game Assets/123 - abc/5-hover.png" id="23_bftus"]
[ext_resource type="Texture2D" uid="uid://khyi5r0krxet" path="res://Assets/GUI/Math Game Assets/123 - abc/6-pressed.png" id="25_w6kqp"]
[ext_resource type="Texture2D" uid="uid://dudup5reb180x" path="res://Assets/GUI/Math Game Assets/123 - abc/6-hover.png" id="26_riqyd"]
[ext_resource type="Texture2D" uid="uid://verjhqh8yt5s" path="res://Assets/GUI/Math Game Assets/123 - abc/7-pressed.png" id="28_tt3q0"]
[ext_resource type="Texture2D" uid="uid://csdsgi2uumr5h" path="res://Assets/GUI/Math Game Assets/123 - abc/7-hover.png" id="29_5hfe4"]
[ext_resource type="Texture2D" uid="uid://dfb5omrtuq3w6" path="res://Assets/GUI/Math Game Assets/123 - abc/8-pressed.png" id="31_sdujt"]
[ext_resource type="Texture2D" uid="uid://xu15pnx74b4d" path="res://Assets/GUI/Math Game Assets/123 - abc/8-hover.png" id="32_yv1og"]
[ext_resource type="Script" path="res://scripts/outline_button.gd" id="34_1a0wr"]
[ext_resource type="Texture2D" uid="uid://ddlio7udr0olc" path="res://Assets/GUI/Math Game Assets/123 - abc/9-pressed.png" id="34_ingu3"]
[ext_resource type="Texture2D" uid="uid://dy65cvweeo6xn" path="res://Assets/GUI/Math Game Assets/123 - abc/9-hover.png" id="35_c4kkd"]
[ext_resource type="Texture2D" uid="uid://bl5wrb41bfpas" path="res://Assets/GUI/Math Game Assets/focused.png" id="36_gs13t"]
[ext_resource type="AudioStream" uid="uid://dyu3smohhd2m" path="res://Assets/sound/1.wav" id="37_ncj5p"]
[ext_resource type="AudioStream" uid="uid://djucqoy618bgx" path="res://Assets/sound/0.wav" id="39_2c4gm"]
[ext_resource type="AudioStream" uid="uid://dll28l1pyf8ve" path="res://Assets/sound/2.wav" id="39_ykk0d"]
[ext_resource type="AudioStream" uid="uid://cywatykoy151b" path="res://Assets/sound/3.wav" id="40_qv3bn"]
[ext_resource type="AudioStream" uid="uid://chbopajxh55xe" path="res://Assets/sound/4.wav" id="41_j1tpr"]
[ext_resource type="AudioStream" uid="uid://tnbx3o8c5e36" path="res://Assets/sound/5.wav" id="42_txyt5"]
[ext_resource type="AudioStream" uid="uid://djndnnsn7p472" path="res://Assets/sound/6.wav" id="43_vn36s"]
[ext_resource type="AudioStream" uid="uid://nd3rwbovryp0" path="res://Assets/sound/7.wav" id="44_ebukl"]
[ext_resource type="AudioStream" uid="uid://qneuw6ox6quq" path="res://Assets/sound/8.wav" id="45_kse02"]
[ext_resource type="AudioStream" uid="uid://bwbgce84m3lwt" path="res://Assets/sound/9.wav" id="46_cndiq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fwscy"]
bg_color = Color(0.572549, 0.92549, 0.560784, 1)
corner_radius_top_left = 37
corner_radius_top_right = 37
corner_radius_bottom_right = 37
corner_radius_bottom_left = 37

[sub_resource type="Theme" id="Theme_7y2sk"]
Panel/styles/panel = SubResource("StyleBoxFlat_fwscy")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gi1ta"]
texture = ExtResource("36_gs13t")
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[node name="belajar_angka" type="Node2D"]
script = ExtResource("1_41x14")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BG" type="TextureRect" parent="CanvasLayer"]
self_modulate = Color(1, 1, 1, 0.890196)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_gdpyp")
expand_mode = 1

[node name="BG2" type="ColorRect" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.713726, 0.603922, 1)

[node name="PanelContainer2" type="PanelContainer" parent="CanvasLayer"]
offset_left = 167.0
offset_top = 34.0
offset_right = 1108.0
offset_bottom = 608.0
theme = ExtResource("3_ypmvh")

[node name="Angka" type="RichTextLabel" parent="CanvasLayer"]
clip_contents = false
anchors_preset = -1
anchor_left = 0.559
anchor_top = 0.061
anchor_right = 0.559
anchor_bottom = 0.061
offset_left = -319.968
offset_top = 39.472
offset_right = 319.032
offset_bottom = 122.472
theme = ExtResource("4_6i7jt")
text = "Belajar Angka"

[node name="GridContainer2" type="GridContainer" parent="CanvasLayer"]
visible = false
offset_left = -163.0
offset_top = 446.5
offset_right = 657.0
offset_bottom = 756.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_constants/h_separation = 30
theme_override_constants/v_separation = 30
columns = 5

[node name="TextureButton" type="Button" parent="CanvasLayer/GridContainer2"]
custom_minimum_size = Vector2(140, 140)
layout_mode = 2
tooltip_text = "
"
focus_neighbor_top = NodePath("../../Kembali")
focus_neighbor_right = NodePath("../TextureButton1")
focus_neighbor_bottom = NodePath("../TextureButton6")
theme = ExtResource("4_7a65n")
text = "0"

[node name="TextureButton1" type="TextureButton" parent="CanvasLayer/GridContainer2"]
custom_minimum_size = Vector2(140, 140)
layout_mode = 2
texture_normal = ExtResource("9_oomom")
texture_pressed = ExtResource("10_401gs")
texture_hover = ExtResource("11_bugm4")
texture_focused = ExtResource("10_xab3n")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureButton2" type="TextureButton" parent="CanvasLayer/GridContainer2"]
custom_minimum_size = Vector2(140, 140)
layout_mode = 2
texture_normal = ExtResource("10_jwj2f")
texture_pressed = ExtResource("13_8ge5a")
texture_hover = ExtResource("14_ms5py")
texture_focused = ExtResource("14_ms5py")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureButton3" type="TextureButton" parent="CanvasLayer/GridContainer2"]
custom_minimum_size = Vector2(140, 140)
layout_mode = 2
texture_normal = ExtResource("11_781v2")
texture_pressed = ExtResource("16_qjmnu")
texture_hover = ExtResource("17_4evuk")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureButton4" type="TextureButton" parent="CanvasLayer/GridContainer2"]
custom_minimum_size = Vector2(140, 140)
layout_mode = 2
texture_normal = ExtResource("12_p5cc4")
texture_pressed = ExtResource("19_s2slp")
texture_hover = ExtResource("20_sxeia")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureButton5" type="TextureButton" parent="CanvasLayer/GridContainer2"]
custom_minimum_size = Vector2(140, 140)
layout_mode = 2
texture_normal = ExtResource("13_cisx6")
texture_pressed = ExtResource("22_oobs1")
texture_hover = ExtResource("23_bftus")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureButton6" type="TextureButton" parent="CanvasLayer/GridContainer2"]
custom_minimum_size = Vector2(140, 140)
layout_mode = 2
texture_normal = ExtResource("14_6sueh")
texture_pressed = ExtResource("25_w6kqp")
texture_hover = ExtResource("26_riqyd")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureButton7" type="TextureButton" parent="CanvasLayer/GridContainer2"]
layout_mode = 2
texture_normal = ExtResource("15_2ovd6")
texture_pressed = ExtResource("28_tt3q0")
texture_hover = ExtResource("29_5hfe4")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureButton8" type="TextureButton" parent="CanvasLayer/GridContainer2"]
layout_mode = 2
texture_normal = ExtResource("16_c3rg1")
texture_pressed = ExtResource("31_sdujt")
texture_hover = ExtResource("32_yv1og")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureButton9" type="TextureButton" parent="CanvasLayer/GridContainer2"]
layout_mode = 2
texture_normal = ExtResource("17_u53ll")
texture_pressed = ExtResource("34_ingu3")
texture_hover = ExtResource("35_c4kkd")
ignore_texture_size = true
stretch_mode = 0

[node name="GridTombol" type="GridContainer" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = -1
anchor_left = 0.51
anchor_top = 0.666
anchor_right = 0.51
anchor_bottom = 0.666
offset_left = -361.52
offset_top = -211.568
offset_right = 458.48
offset_bottom = 98.432
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_constants/h_separation = 30
theme_override_constants/v_separation = 30
columns = 5

[node name="TextureButton1" type="TextureButton" parent="CanvasLayer/GridTombol"]
custom_minimum_size = Vector2(140, 140)
layout_mode = 2
toggle_mode = true
action_mode = 0
texture_normal = ExtResource("9_oomom")
texture_pressed = ExtResource("10_401gs")
texture_hover = ExtResource("11_bugm4")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureButton2" type="TextureButton" parent="CanvasLayer/GridTombol"]
custom_minimum_size = Vector2(140, 140)
layout_mode = 2
toggle_mode = true
action_mode = 0
texture_normal = ExtResource("10_jwj2f")
texture_pressed = ExtResource("13_8ge5a")
texture_hover = ExtResource("14_ms5py")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureButton3" type="TextureButton" parent="CanvasLayer/GridTombol"]
custom_minimum_size = Vector2(140, 140)
layout_mode = 2
toggle_mode = true
action_mode = 0
texture_normal = ExtResource("11_781v2")
texture_pressed = ExtResource("16_qjmnu")
texture_hover = ExtResource("17_4evuk")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureButton4" type="TextureButton" parent="CanvasLayer/GridTombol"]
custom_minimum_size = Vector2(140, 140)
layout_mode = 2
toggle_mode = true
action_mode = 0
texture_normal = ExtResource("12_p5cc4")
texture_pressed = ExtResource("19_s2slp")
texture_hover = ExtResource("20_sxeia")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureButton5" type="TextureButton" parent="CanvasLayer/GridTombol"]
custom_minimum_size = Vector2(140, 140)
layout_mode = 2
toggle_mode = true
action_mode = 0
texture_normal = ExtResource("13_cisx6")
texture_pressed = ExtResource("22_oobs1")
texture_hover = ExtResource("23_bftus")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureButton6" type="TextureButton" parent="CanvasLayer/GridTombol"]
custom_minimum_size = Vector2(140, 140)
layout_mode = 2
toggle_mode = true
action_mode = 0
texture_normal = ExtResource("14_6sueh")
texture_pressed = ExtResource("25_w6kqp")
texture_hover = ExtResource("26_riqyd")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureButton7" type="TextureButton" parent="CanvasLayer/GridTombol"]
layout_mode = 2
toggle_mode = true
action_mode = 0
texture_normal = ExtResource("15_2ovd6")
texture_pressed = ExtResource("28_tt3q0")
texture_hover = ExtResource("29_5hfe4")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureButton8" type="TextureButton" parent="CanvasLayer/GridTombol"]
layout_mode = 2
toggle_mode = true
action_mode = 0
texture_normal = ExtResource("16_c3rg1")
texture_pressed = ExtResource("31_sdujt")
texture_hover = ExtResource("32_yv1og")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureButton9" type="TextureButton" parent="CanvasLayer/GridTombol"]
layout_mode = 2
toggle_mode = true
action_mode = 0
texture_normal = ExtResource("17_u53ll")
texture_pressed = ExtResource("34_ingu3")
texture_hover = ExtResource("35_c4kkd")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureButton" type="TextureButton" parent="CanvasLayer/GridTombol"]
custom_minimum_size = Vector2(140, 140)
layout_mode = 2
tooltip_text = "
"
focus_neighbor_top = NodePath("../../Kembali")
focus_neighbor_right = NodePath("../TextureButton1")
focus_neighbor_bottom = NodePath("../TextureButton6")
theme = ExtResource("4_7a65n")
toggle_mode = true
action_mode = 0
texture_normal = ExtResource("6_ijaph")
texture_pressed = ExtResource("7_374v6")
texture_hover = ExtResource("8_gf5i6")
ignore_texture_size = true
stretch_mode = 0

[node name="Panel" type="Panel" parent="CanvasLayer"]
visible = false
custom_minimum_size = Vector2(797, 375)
anchors_preset = -1
anchor_left = 0.564
anchor_top = 0.5
anchor_right = 0.564
anchor_bottom = 0.5
offset_left = -443.728
offset_top = -263.0
offset_right = 443.272
offset_bottom = 262.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme = ExtResource("4_6i7jt")

[node name="ColorRect" type="Panel" parent="CanvasLayer/Panel"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 8.0
offset_right = -7.0
offset_bottom = -33.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_7y2sk")

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.169
anchor_top = 0.052
anchor_right = 0.975
anchor_bottom = 0.894
offset_left = -90.903
offset_top = 137.7
offset_right = -29.825
offset_bottom = 4.64996
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_constants/h_separation = 19
theme_override_constants/v_separation = 29
columns = 5

[node name="TextureButton" type="TextureButton" parent="CanvasLayer/Panel/GridContainer"]
custom_minimum_size = Vector2(140, 140)
layout_mode = 2
tooltip_text = "
"
focus_neighbor_top = NodePath("../../Kembali")
focus_neighbor_right = NodePath("../TextureButton1")
focus_neighbor_bottom = NodePath("../TextureButton6")
texture_normal = ExtResource("6_ijaph")
texture_pressed = ExtResource("7_374v6")
texture_hover = ExtResource("8_gf5i6")
texture_focused = ExtResource("8_gf5i6")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureButton1" type="TextureButton" parent="CanvasLayer/Panel/GridContainer"]
custom_minimum_size = Vector2(140, 140)
layout_mode = 2
texture_normal = ExtResource("9_oomom")
texture_pressed = ExtResource("10_401gs")
texture_hover = ExtResource("11_bugm4")
texture_focused = ExtResource("11_bugm4")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureButton2" type="TextureButton" parent="CanvasLayer/Panel/GridContainer"]
custom_minimum_size = Vector2(140, 140)
layout_mode = 2
texture_normal = ExtResource("10_jwj2f")
texture_pressed = ExtResource("13_8ge5a")
texture_hover = ExtResource("14_ms5py")
texture_focused = ExtResource("14_ms5py")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureButton3" type="TextureButton" parent="CanvasLayer/Panel/GridContainer"]
custom_minimum_size = Vector2(140, 140)
layout_mode = 2
texture_normal = ExtResource("11_781v2")
texture_pressed = ExtResource("16_qjmnu")
texture_hover = ExtResource("17_4evuk")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureButton4" type="TextureButton" parent="CanvasLayer/Panel/GridContainer"]
custom_minimum_size = Vector2(140, 140)
layout_mode = 2
texture_normal = ExtResource("12_p5cc4")
texture_pressed = ExtResource("19_s2slp")
texture_hover = ExtResource("20_sxeia")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureButton5" type="TextureButton" parent="CanvasLayer/Panel/GridContainer"]
custom_minimum_size = Vector2(140, 140)
layout_mode = 2
texture_normal = ExtResource("13_cisx6")
texture_pressed = ExtResource("22_oobs1")
texture_hover = ExtResource("23_bftus")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureButton6" type="TextureButton" parent="CanvasLayer/Panel/GridContainer"]
custom_minimum_size = Vector2(140, 140)
layout_mode = 2
texture_normal = ExtResource("14_6sueh")
texture_pressed = ExtResource("25_w6kqp")
texture_hover = ExtResource("26_riqyd")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureButton7" type="TextureButton" parent="CanvasLayer/Panel/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("15_2ovd6")
texture_pressed = ExtResource("28_tt3q0")
texture_hover = ExtResource("29_5hfe4")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureButton8" type="TextureButton" parent="CanvasLayer/Panel/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("16_c3rg1")
texture_pressed = ExtResource("31_sdujt")
texture_hover = ExtResource("32_yv1og")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureButton9" type="TextureButton" parent="CanvasLayer/Panel/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("17_u53ll")
texture_pressed = ExtResource("34_ingu3")
texture_hover = ExtResource("35_c4kkd")
ignore_texture_size = true
stretch_mode = 0

[node name="Angka" type="RichTextLabel" parent="CanvasLayer/Panel"]
clip_contents = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.582
anchor_top = 0.195
anchor_right = 0.582
anchor_bottom = 0.195
offset_left = -388.464
offset_top = -62.36
offset_right = 250.536
offset_bottom = 20.64
theme = ExtResource("4_6i7jt")
text = "Belajar Angka"

[node name="Kembali" type="TextureButton" parent="CanvasLayer"]
offset_left = 28.0
offset_top = 28.0
offset_right = 148.0
offset_bottom = 148.0
texture_normal = ExtResource("3_ih1sq")
texture_pressed = ExtResource("4_8iain")
stretch_mode = 5

[node name="TextureButton" type="TextureButton" parent="CanvasLayer"]
visible = false
offset_left = 24.0
offset_top = 24.0
offset_right = 143.0
offset_bottom = 120.0
texture_normal = ExtResource("2_xe6rb")
ignore_texture_size = true
stretch_mode = 0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="CanvasLayer"]
stream = ExtResource("39_2c4gm")
volume_db = 12.84
pitch_scale = 1.39

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="CanvasLayer"]
stream = ExtResource("37_ncj5p")
volume_db = 12.84
pitch_scale = 1.39

[node name="AudioStreamPlayer2D3" type="AudioStreamPlayer2D" parent="CanvasLayer"]
stream = ExtResource("39_ykk0d")
volume_db = 12.84
pitch_scale = 1.39

[node name="AudioStreamPlayer2D4" type="AudioStreamPlayer2D" parent="CanvasLayer"]
stream = ExtResource("40_qv3bn")
volume_db = 12.84
pitch_scale = 1.39

[node name="AudioStreamPlayer2D5" type="AudioStreamPlayer2D" parent="CanvasLayer"]
stream = ExtResource("41_j1tpr")
volume_db = 12.84
pitch_scale = 1.39

[node name="AudioStreamPlayer2D6" type="AudioStreamPlayer2D" parent="CanvasLayer"]
stream = ExtResource("42_txyt5")
volume_db = 12.84
pitch_scale = 1.39

[node name="AudioStreamPlayer2D7" type="AudioStreamPlayer2D" parent="CanvasLayer"]
stream = ExtResource("43_vn36s")
volume_db = 12.84
pitch_scale = 1.39

[node name="AudioStreamPlayer2D8" type="AudioStreamPlayer2D" parent="CanvasLayer"]
stream = ExtResource("44_ebukl")
volume_db = 12.84
pitch_scale = 1.39

[node name="AudioStreamPlayer2D9" type="AudioStreamPlayer2D" parent="CanvasLayer"]
stream = ExtResource("45_kse02")
volume_db = 12.84
pitch_scale = 1.39

[node name="AudioStreamPlayer2D10" type="AudioStreamPlayer2D" parent="CanvasLayer"]
stream = ExtResource("46_cndiq")
volume_db = 12.84
pitch_scale = 1.39

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 177.0
offset_top = 249.0
offset_right = 177.0
offset_bottom = 249.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_gi1ta")
script = ExtResource("34_1a0wr")

[connection signal="pressed" from="CanvasLayer/GridContainer2/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="CanvasLayer/GridContainer2/TextureButton" to="CanvasLayer/GridContainer2/TextureButton" method="_on_pressed"]
[connection signal="pressed" from="CanvasLayer/GridContainer2/TextureButton1" to="." method="_on_texture_button_1_pressed"]
[connection signal="pressed" from="CanvasLayer/GridContainer2/TextureButton2" to="." method="_on_texture_button_2_pressed"]
[connection signal="pressed" from="CanvasLayer/GridContainer2/TextureButton3" to="." method="_on_texture_button_3_pressed"]
[connection signal="pressed" from="CanvasLayer/GridContainer2/TextureButton4" to="." method="_on_texture_button_4_pressed"]
[connection signal="pressed" from="CanvasLayer/GridContainer2/TextureButton5" to="." method="_on_texture_button_5_pressed"]
[connection signal="pressed" from="CanvasLayer/GridContainer2/TextureButton6" to="." method="_on_texture_button_6_pressed"]
[connection signal="pressed" from="CanvasLayer/GridContainer2/TextureButton7" to="." method="_on_texture_button_7_pressed"]
[connection signal="pressed" from="CanvasLayer/GridContainer2/TextureButton8" to="." method="_on_texture_button_8_pressed"]
[connection signal="pressed" from="CanvasLayer/GridContainer2/TextureButton9" to="." method="_on_texture_button_9_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/GridContainer/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/GridContainer/TextureButton1" to="." method="_on_texture_button_1_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/GridContainer/TextureButton2" to="." method="_on_texture_button_2_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/GridContainer/TextureButton3" to="." method="_on_texture_button_3_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/GridContainer/TextureButton4" to="." method="_on_texture_button_4_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/GridContainer/TextureButton5" to="." method="_on_texture_button_5_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/GridContainer/TextureButton6" to="." method="_on_texture_button_6_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/GridContainer/TextureButton7" to="." method="_on_texture_button_7_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/GridContainer/TextureButton8" to="." method="_on_texture_button_8_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/GridContainer/TextureButton9" to="." method="_on_texture_button_9_pressed"]
[connection signal="pressed" from="CanvasLayer/Kembali" to="." method="_on_kembali_pressed"]
[connection signal="pressed" from="CanvasLayer/TextureButton" to="." method="_on_texture_button_pressed"]
